--- a/index.html
+++ b/index.html
@@ -1,10 +1,171 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body></body>
+  <body>
+
+    <header class="header">
+      <nav>
+        <ul class="header__menu">
+          <li class="header__link"><a href="" class="header__links-list-item_no-bullit">главная</a></li>
+          <li><a href="" class="header__link_active">посмотреть лоты</a></li>
+          <li><a href="" class="header__link_active">об аукционе</a></li>
+        </ul>
+      </nav>
+      <a>
+        <img
+          style="width: 148px; height: 105px"
+          src="images/logo-black.svg"
+          alt="Логотип"
+        >
+      </a>
+      <address class="contacts">
+        <a class="header__link_active" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="header__link_active" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="header__link" href="">наб. Принсенграхт 263-<br> 265, Амстердам</a>
+      </address>
+    </header>
+
+    <main>
+      <!-- cover -->
+      <section class="cover">
+        <div class="overlay">
+          <h1 class="cover__title">
+            <span class="aligned-text">он<span class="letter-spacing-extended">о</span></span>
+            <span class="aligned-text aligned-text_center">теб<span class="letter-spacing-extended">е</span></span>
+            <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>адо</span>
+          </h1>
+          <div class="cover__description">
+            <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+            <button class="bet-button">Сделать ставку</button>
+          </div>
+        </div>
+      </section>
+      <!-- lots -->
+      <section class="lots">
+        <header class="lots__heading">
+          <h2>лоты</h2>
+        </header>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a href="" class="card-link card_type_film">
+              <div class="overlay">
+                <article class="card"> 
+                  <h3 class="card__title">
+                    Фильм режиссёра, который бросил киношколу
+                  </h3> 
+                  <p class="card__text">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                  </p>
+                </article>
+              </div>
+            </a>
+          </li>
+          <li class="lots__card-list-item "> 
+            <a href="" class="card-link card_type_book">
+              <div class="overlay">
+                <article class="card"> 
+                  <h3 class="card__title">
+                    Книга, где описан один скучный день из жизни рекламного агента
+                  </h3>
+                  <p class="card__text">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                    переходами на древнеанглийский. В ней одновременно рассказывается
+                    о 16 июня 1904 года и об истории литературы, начиная с античных
+                    времён. И это всё накладывается на эпическую поэму Гомера. Сколько
+                    бы вы поставили на «Улисса» Джеймса Джойса?
+                  </p>
+                </article>
+              </div>
+            </a>
+          </li>
+          <li class="lots__card-list-item"> 
+            <a href="" class="card-link card_type_picture">
+              <div class="overlay">
+                <article class="card"> 
+                  <h3 class="card__title">
+                    Картина, которую повторит даже 5-летний сын маминой подруги
+                  </h3> 
+                  <p class="card__text">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
+                    похожее на инфузорию-туфельку. Никаких полей, лесов, котиков. . . 
+                    Сколько бы вы на такое поставили, если бы не знали, что это — одна
+                    из революционных работ Кандинского?
+                  </p>
+                </article>
+              </div>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link">посмотреть больше</a>
+      </section>
+      <!-- about -->
+      <section class="about">
+        <a class="about__logo">
+          <img
+            class="about__logo-image"
+            src="images/logo-white.svg"
+            alt="Логотип"
+          >
+        </a>
+          <h4 class="about__title">Об аукционе</h4>
+          <div class="about__text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+              один аукцион. Потому что кому нужен дневник девочки-подростка или
+              картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+              странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+              Когда-то они казались просто неудачными. Но, несмотря <br> на критику,
+              кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+              представить современную культуру. Когда в эти вещи не верил никто,
+              продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+            </p>
+          </div>
+      </section>
+    </main>
+    <footer>
+      <address class="contacts">
+        <a class="header__link_active" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="header__link_active" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="header__link" href="">наб. Принсенграхт 263- 265, Амстердам</a>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li><a href="" class="footer__menu-link_active">главная</a></li>
+          <li><a href="" class="footer__menu-link">посмотреть лоты</a></li>
+          <li><a href="" class="footer__menu-link">об аукционе</a></li>
+        </ul>
+      </nav>
+      <a class="footer__social-list">
+        <img
+          class="footer__social-icon"
+          src="images/yt.svg"
+          alt="Ссылка на Ютуб"
+        >
+        <img
+          class="footer__social-icon"
+          src="images/vk.svg"
+          alt="Ссылка на ВК"
+        >
+        <img
+          class="footer__social-icon"
+          src="images/pinterest.svg"
+          alt="Ссылка на Пинтерест"
+        >
+      </a>
+    </footer>
+  </body>
 </html>
