--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <li><a href="" class="footer__menu-link">об аукционе</a></li>
         </ul>
       </nav>
-      <aside class="footer__social-list">
+      <div class="footer__social-list">
         <a>
           <img
             class="footer__social-icon"
@@ -171,7 +171,7 @@
             alt="Ссылка на Пинтерест"
           >
         </a>
-      </aside>
+      </div>
     </footer>
   </body>
 </html>
